--- a/styles.css
+++ b/styles.css
@@ -203,8 +203,30 @@ body {
     animation: slide-down 0.5s ease forwards;
 }
 
-@media (max-width: 1170px) {
+@media (max-width: 800px) {
     body {
-        display: block;
+        flex-direction: column;
+    }
+
+    .ops {
+        width: 80%;
+        margin-bottom: 20px;
+        margin-top: 180px;
+    }
+
+    #op1 {
+        margin-top: 20px;
+    }
+
+    #op2 {
+        margin-top: 20px;
+    }
+
+    #bars {
+        margin-right: 10px;
+    }
+
+    #search {
+        margin-right: 260px;
     }
 }
