--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ body {
     }
 }
 
-@media (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
     body {
         flex-direction: row;
         justify-content: space-evenly;
