--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,10 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
 #header {
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
     width: 100%;
@@ -23,6 +19,18 @@ body {
     background-color: darkgray;
     box-shadow: 0 0 3px rgba(0,0,0,.25);
     color: dimgray;
+}
+
+#main {
+    background-color: whitesmoke;
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 #icons {
@@ -49,8 +57,6 @@ body {
     height: 500px;
     border-radius: 15px;
     border: solid 2px dimgray;
-    margin-top: 130px;
-    margin-bottom: 160px;
 }
 
 .im {
@@ -151,6 +157,7 @@ body {
     border-radius: 15px;
     color: darkgray;
     margin-right: 20px;
+    margin-top: 90px;
 }
 
 .overlay-button {
@@ -208,7 +215,7 @@ body {
 }
 
 @media (max-width: 800px) {
-    body {
+    #main {
         flex-direction: column;
     }
 
@@ -232,5 +239,18 @@ body {
 
     #search {
         margin-right: 260px;
+    }
+}
+
+@media (min-width: 801px) {
+    body {
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    .ops {
+        margin-top: 130px;
+        margin-bottom: 160px;
     }
 }
